--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,120 @@ header {
 #activity-menu img:last-child {
   margin-right: 0;
 }
+
+
+#activity-detail {
+  position: relative;
+}
+
+.detail-image {
+  height: 350px;
+}
+
+.name{
+  position: relative;
+  left: 0px;
+  padding: 0.25rem 5rem 0.25rem 1rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  bottom: 60px;
+}
+
+.description{
+  position: relative;
+  bottom: 20px;
+}
+p{
+  font-style: oblique;
+}
+
+.likeBtn {
+position: relative;
+bottom: 40px;
+width: 50px;
+height: 20px;
+color: white;
+border: 1px solid white;
+background-color: rgb(17, 71, 141);
+cursor: pointer;
+}
+
+.likeBtn:hover{
+  background-color: rgb(84, 155, 149);
+}
+
+.liked {
+  position: relative;
+  bottom: 40px;
+  width: 50px;
+  height: 20px;
+
+  color: white;
+  border: 1px solid white;
+  background-color: rgb(255, 64, 80);
+  cursor: pointer;
+}
+
+.liked:hover{
+  background-color:  rgb(236, 143, 151);
+}
+
+.dislike{
+  position: relative;
+  bottom: 40px;
+  width: 50px;
+  height: 20px;
+  color: white;
+  border: 1px solid white;
+  background-color: rgb(17, 71, 141);
+  cursor: pointer;
+}
+
+form {
+  margin: 1rem 0;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+input {
+  font-size: 1rem;
+  border: 1px solid black;
+  background-color: white;
+  padding: 0.5rem;
+  margin: 0.25rem 0;
+  width: 100%;
+}
+
+#season {
+  font-size: 1rem;
+  border: 1px solid black;
+  background-color: white;
+  padding: 0.5rem;
+  margin: 0.25rem 0;
+  width: 100%;
+}
+
+#sort{
+  margin: 1rem 0;
+  width: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+input[type="submit"] {
+  color: white;
+  border: 1px solid white;
+  background-color: rgb(17, 71, 141);
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+input[type="submit"]:hover {
+  background-color: rgb(97, 179, 172);
+}
+
+
+
+
